# skippable-partialeq

./: Cargo.toml  README.md
src/: lib.rs
tests/: derive_macro_test.rs
