[package]
authors = ["Caio Gomes <caiocodes@proton.me>"]
name = "skippable-partialeq"
version = "1.0.0"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://github.com/caioluis/skippable-partialeq"
repository = "https://github.com/caioluis/skippable-partialeq"
description = "PartialEq, but you can ignore fields"
readme = "README.md"
keywords = ["partialeq", "testing"]
categories = ["development-tools::testing"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.36"
syn = { version = "2.0.60", features = ["parsing", "derive"] }

[dev-dependencies]
chrono = "0.4.38"
